fixed some alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ section {
     left: 105%;
     visibility: hidden;
     width: 120px;
-    background-color: black;
+    background-color: #212529;
     color: #fff;
     text-align: center;
     border-radius: 6px;
